test/Fail/Issue2858-missing.err
Issue2858-missing.agda:3.3-5.8: error: [MissingDefinitions]
The following names are declared but lack a definition:
IsNat Nat isNat
